# pauli

./: Cargo.toml  LICENSE  README.md
src/: base.rs  lib.rs  operator.rs  pauli.rs  phase.rs
src/operators/: dense.rs  mod.rs
