[package]
name = "pauli"
version = "0.3.0"
authors = ["maxtremblay <matrem@protonmail.com>"]
edition = "2021"
description = "A toolbox for quantum Pauli operator"
license = "MIT OR Apache-2.0"
keywords = ["quantum"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
sprs = { version = "0.9.3", features = ["serde"] }
